--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "countries-list": "^2.6.1",
+    "logrocket": "^1.2.1",
     "rc-slider": "^9.7.2",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
